# nb_oai_pmh_metadata

./: README.md  pyproject.toml
docs/: OAI-PMH.md
nb_oai_pmh_metadata/: add_date_urn_mmsid.py  get_norbok.py  parse_xml_to_mongodb.py
