[tool.poetry]
name = "nb-oai-pmh-metadata"
version = "0.1.0"
description = ""
authors = ["Lars Magne Tungland <larsmtungland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymarc = "^5.1.2"
pymongo = "^4.6.3"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
